--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "cSpell.words": ["daisyui", "Dmytro", "Nextdotjs", "Rogkov", "tailwindcss"]
+    "cSpell.words": ["daisyui", "Dmytro", "Nextdotjs", "Rogkov", "tailwindcss", "tglbg"]
 }
