--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "@hookform/resolvers": "^3.6.0",
         "@reduxjs/toolkit": "^2.2.5",
         "classnames": "^2.5.1",
+        "lodash.debounce": "^4.0.8",
         "next": "14.2.4",
         "next-themes": "^0.3.0",
         "react": "^18",
@@ -22,6 +23,7 @@
         "yup": "^1.4.0"
     },
     "devDependencies": {
+        "@types/lodash.debounce": "^4.0.9",
         "@types/node": "^20",
         "@types/react": "^18",
         "@types/react-dom": "^18",
